# post-watch

./: .gitignore  POST_WATCH_DESIGN_SPEC.md  README.md  SETUP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: post-watch-field-guide.html  sprint-13-discovery.md  sprint-15-encryption.md  sprint-16-pack-4.md  sprint-18-encryption-followups.md  sprint-19-pack6-qol.md  sprint-20-cmdk-nl-search.md  v3.0-release-notes.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: SavedItems.tsx
src/components/alerts/: AlertCenter.tsx
src/components/audit/: AuditModule.tsx
src/data/: auditTypes.ts  checkExplainers.ts  clauses.ts  controls-organisational.ts  controls-people-physical.ts  controls-technological.ts  controls.ts  crossReferences.ts  implementationData.ts  projects.ts  quickReference.ts  types.ts
src/hooks/: scanQueueContext.tsx  scanQueueContextRef.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useKeyboardShortcuts.ts  useLocalStorage.test.tsx  useLocalStorage.ts  useScanQueue.ts  useScanScheduler.ts  useSearch.ts  useSearchHistory.test.ts  useSearchHistory.ts  useVault.ts
src/pdf/: CapaPdf.tsx  CompliancePdf.tsx  ExecutiveSummaryPdf.tsx  MrPdf.tsx  PortfolioSummaryPdf.tsx  SoaPdf.tsx  WpSecurityPdf.tsx  exportCapa.ts  exportMr.ts  exportSoa.ts  generate.tsx  portfolioSummary.test.ts  portfolioSummary.ts  primitives.tsx  theme.ts
src/styles/: redesign.css
src/utils/: backup.test.ts  backup.ts  clientMigration.test.ts  clientMigration.ts  crypto.test.ts  crypto.ts  cryptoStorage.test.ts  cryptoStorage.ts  deriveAlerts.test.ts  deriveAlerts.ts  dialog.ts  diff.test.ts  diff.ts  export.ts  filters.ts  findings.test.ts  findings.ts  integrity.test.ts  integrity.ts  isms.test.ts  isms.ts  kpis.test.ts  kpis.ts  multiWindow.ts  openExternal.ts  recoveryCode.test.ts  recoveryCode.ts  registers.ts  sampleData.ts  search.ts  soa.test.ts  soa.ts  toastBus.ts  undoBus.test.ts  undoBus.ts  vault.ts
test/: setup.ts
(+102 files in other folders)
