[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# DevTools intentionally OFF in release builds — exposes app internals
# (localStorage with potentially-sensitive client data, signed update
# verification flow, etc.) to anyone holding the binary. Re-enable
# temporarily by adding "devtools" to features when diagnosing user-
# reported render bugs that don't reproduce in dev (was on for v2.4.3
# and v2.4.4 to isolate the hero-clipping bug; rolled back in v2.4.5).
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
